add user not found layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,7 @@
     <string name="follower_1_s_following_2_s">Follower %1$s - Following %2$s</string>
     <string name="share">Share</string>
     <string name="user_id">user id</string>
+    <string name="user_s_not_found">User(s) not found</string>
 
     <string-array name="username">
         <item>JakeWharton</item>
