setup favorite user fragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="user_s_not_found">User(s) not found</string>
     <string name="back">Back</string>
     <string name="company_location">%1s - %2s</string>
+    <string name="favorite_user">Favorite User</string>
 
     <string-array name="username">
         <item>JakeWharton</item>
